--- a/teoria-css/navbar/index.html
+++ b/teoria-css/navbar/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!-- Navbar - Menu Dropdnloan (Hamburger)-->
+    <!-- Navbar - Menu Dropdown (Hamburger)-->
  <nav>
 <p>Blog - Inez</p>
 
